add php methods and database for site

--- a/views/site/oil example.html
+++ b/views/site/oil example.html
@@ -202,7 +202,7 @@
                     <div class='tn-atom' field='tn_text_1561047414104'>Косметическое кокосовое масло</div>
                 </div>
                 <div class='t396__elem tn-elem tn-elem__1117121831561047474186' data-elem-id='1561047474186'>
-                    <div class='tn-atom' field='tn_text_1561047474186'>Только 3 дня скидка 40%!</div>
+                    <div class='tn-atom' field='tn_text_1561047474186'>Nur noch 3 Tage 40% Rabatt!</div>
                 </div>
                 <div class='t396__elem tn-elem tn-elem__1117121831561047519968' data-elem-id='1561047519968'>
                     <div class='tn-atom' field='tn_text_1561047519968'>С 1-го применения - шёлковые волосы!
@@ -215,7 +215,7 @@
                     </div>
                 </div>
                 <div class='t396__elem tn-elem tn-elem__1117121831561047636913' data-elem-id='1561047636913'>
-                    <a class='tn-atom' href="#order:Кокосовое масло Maldives Dreams=299 ">Купить за 299 грн.</a>
+                    <a class='tn-atom' href="#order:Кокосовое масло Maldives Dreams=299 ">Kaufen Sie für17 €.</a>
                 </div>
                 <div class='t396__elem tn-elem tn-elem__1117121831561068493905' data-elem-id='1561068493905'>
                     <div class='tn-atom'>
@@ -486,7 +486,7 @@
                 <div class="t396__carrier"></div>
                 <div class="t396__filter"></div>
                 <div class='t396__elem tn-elem tn-elem__1120569771561268349741' data-elem-id='1561268349741'>
-                    <a class='tn-atom' href="#popup:myform">Купить за 300 грн.</a>
+                    <a class='tn-atom' href="#popup:myform">Kaufen Sie für300 грн.</a>
                 </div>
                 <div class='t396__elem tn-elem tn-elem__1120569771561268349747' data-elem-id='1561268349747'>
                     <div class='tn-atom' field='tn_text_1561268349747'>
@@ -513,12 +513,12 @@
                     <div class='tn-atom' field='tn_text_1561268438170'>По цене в 2 раза ниже обычной!</div>
                 </div>
                 <div class='t396__elem tn-elem tn-elem__1120569771561268444952' data-elem-id='1561268444952'>
-                    <div class='tn-atom' field='tn_text_1561268444952'>Только 3 дня скидка 40%!</div>
+                    <div class='tn-atom' field='tn_text_1561268444952'>Nur noch 3 Tage 40% Rabatt!</div>
                 </div>
                 <div class='t396__elem tn-elem tn-elem__1120569771561268589823' data-elem-id='1561268589823'>
                     <a class='tn-atom'
                        href="#order:Кокосовое масло Maldives Dreams=299 ">Купить
-                        за 299 грн.</a></div>
+                        за 17 €.</a></div>
                 <div class='t396__elem tn-elem tn-elem__1120569771561268645935' data-elem-id='1561268645935'>
                     <div class='tn-atom' field='tn_text_1561268645935'>
                         <del>500 грн</del>
@@ -686,7 +686,7 @@
                 <div class="t396__carrier"></div>
                 <div class="t396__filter"></div>
                 <div class='t396__elem tn-elem tn-elem__1123887491561268349741' data-elem-id='1561268349741'>
-                    <a class='tn-atom' href="#popup:myform">Купить за 300 грн.</a>
+                    <a class='tn-atom' href="#popup:myform">Kaufen Sie für300 грн.</a>
                 </div>
                 <div class='t396__elem tn-elem tn-elem__1123887491561268349747' data-elem-id='1561268349747'>
                     <div class='tn-atom' field='tn_text_1561268349747'>По цене в 2 раза ниже обычной!</div>
@@ -712,11 +712,11 @@
                     <div class='tn-atom' field='tn_text_1561268438170'>По цене в 2 раза ниже обычной!</div>
                 </div>
                 <div class='t396__elem tn-elem tn-elem__1123887491561268444952' data-elem-id='1561268444952'>
-                    <div class='tn-atom' field='tn_text_1561268444952'>Только 3 дня скидка 40%!</div>
+                    <div class='tn-atom' field='tn_text_1561268444952'>Nur noch 3 Tage 40% Rabatt!</div>
                 </div>
                 <div class='t396__elem tn-elem tn-elem__1123887491561268589823' data-elem-id='1561268589823'><a class='tn-atom'
                                                                                                                 href="#order:Кокосовое масло Maldives Dreams=299 ">Купить
-                    за 299 грн.</a></div>
+                    за 17 €.</a></div>
                 <div class='t396__elem tn-elem tn-elem__1123887491561268645935' data-elem-id='1561268645935'>
                     <div class='tn-atom' field='tn_text_1561268645935'>
                         <del>500 грн</del>
@@ -870,7 +870,7 @@
             <div class="t396__carrier"></div>
             <div class="t396__filter"></div>
             <div class='t396__elem tn-elem tn-elem__1123888741561268349741' data-elem-id='1561268349741'>
-                <a class='tn-atom' href="#popup:myform">Купить за 300 грн.</a>
+                <a class='tn-atom' href="#popup:myform">Kaufen Sie für300 грн.</a>
             </div>
             <div class='t396__elem tn-elem tn-elem__1123888741561268349747' data-elem-id='1561268349747'>
                 <div class='tn-atom' field='tn_text_1561268349747'>По цене в 2 раза ниже обычной!</div>
@@ -881,7 +881,7 @@
                 </div>
             </div>
             <div class='t396__elem tn-elem tn-elem__1123888741561268351707' data-elem-id='1561268351707'>
-                <a class='tn-atom' href="#popup:myform">Купить за 300 грн.</a></div>
+                <a class='tn-atom' href="#popup:myform">Kaufen Sie für300 грн.</a></div>
             <div class='t396__elem tn-elem tn-elem__1123888741561268351714' data-elem-id='1561268351714'>
                 <div class='tn-atom' field='tn_text_1561268351714'>По цене в 2 раза ниже обычной!</div>
             </div>
@@ -894,11 +894,11 @@
                 <div class='tn-atom' field='tn_text_1561268438170'>По цене в 2 раза ниже обычной!</div>
             </div>
             <div class='t396__elem tn-elem tn-elem__1123888741561268444952' data-elem-id='1561268444952'>
-                <div class='tn-atom' field='tn_text_1561268444952'>Только 3 дня скидка 40%!</div>
+                <div class='tn-atom' field='tn_text_1561268444952'>Nur noch 3 Tage 40% Rabatt!</div>
             </div>
             <div class='t396__elem tn-elem tn-elem__1123888741561268589823' data-elem-id='1561268589823'><a class='tn-atom'
                                                                                                             href="#order:Кокосовое масло Maldives Dreams=299 ">Купить
-                за 299 грн.</a></div>
+                за 17 €.</a></div>
             <div class='t396__elem tn-elem tn-elem__1123888741561268645935' data-elem-id='1561268645935'>
                 <div class='tn-atom' field='tn_text_1561268645935'>
                     <del>500 грн</del>
@@ -1512,12 +1512,12 @@
                     <div class='tn-atom' field='tn_text_1561268438170'>По цене в 2 раза ниже обычной!</div>
                 </div>
                 <div class='t396__elem tn-elem tn-elem__1139474991561268444952' data-elem-id='1561268444952'>
-                    <div class='tn-atom' field='tn_text_1561268444952'>Только 3 дня скидка 40%!</div>
+                    <div class='tn-atom' field='tn_text_1561268444952'>Nur noch 3 Tage 40% Rabatt!</div>
                 </div>
                 <div class='t396__elem tn-elem tn-elem__1139474991561268589823' data-elem-id='1561268589823'>
                     <a class='tn-atom'
                        href="#order:Кокосовое масло Maldives Dreams=299 ">Купить
-                        за 299 грн.</a></div>
+                        за 17 €.</a></div>
                 <div class='t396__elem tn-elem tn-elem__1139474991561268645935' data-elem-id='1561268645935'>
                     <div class='tn-atom' field='tn_text_1561268645935'>
                         <del>500 грн</del>
@@ -1667,7 +1667,7 @@
                 <div class="t396__carrier"></div>
                 <div class="t396__filter"></div>
                 <div class='t396__elem tn-elem tn-elem__1123888991561268349741' data-elem-id='1561268349741'>
-                    <a class='tn-atom' href="#popup:myform">Купить за 300 грн.</a>
+                    <a class='tn-atom' href="#popup:myform">Kaufen Sie für300 грн.</a>
                 </div>
                 <div class='t396__elem tn-elem tn-elem__1123888991561268349747' data-elem-id='1561268349747'>
                     <div class='tn-atom' field='tn_text_1561268349747'>По цене в 2 раза ниже обычной!</div>
@@ -1678,7 +1678,7 @@
                     </div>
                 </div>
                 <div class='t396__elem tn-elem tn-elem__1123888991561268351707' data-elem-id='1561268351707'>
-                    <a class='tn-atom' href="#popup:myform">Купить за 300 грн.</a>
+                    <a class='tn-atom' href="#popup:myform">Kaufen Sie für300 грн.</a>
                 </div>
                 <div class='t396__elem tn-elem tn-elem__1123888991561268351714' data-elem-id='1561268351714'>
                     <div class='tn-atom' field='tn_text_1561268351714'>По цене в 2 раза ниже обычной!</div>
@@ -1692,10 +1692,10 @@
                     <div class='tn-atom' field='tn_text_1561268438170'>По цене в 2 раза ниже обычной!</div>
                 </div>
                 <div class='t396__elem tn-elem tn-elem__1123888991561268444952' data-elem-id='1561268444952'>
-                    <div class='tn-atom' field='tn_text_1561268444952'>Только 3 дня скидка 40%!</div>
+                    <div class='tn-atom' field='tn_text_1561268444952'>Nur noch 3 Tage 40% Rabatt!</div>
                 </div>
                 <div class='t396__elem tn-elem tn-elem__1123888991561268589823' data-elem-id='1561268589823'>
-                    <a class='tn-atom' href="#order:Кокосовое масло Maldives Dreams=299 ">Купить за 299 грн.</a>
+                    <a class='tn-atom' href="#order:Кокосовое масло Maldives Dreams=299 ">Kaufen Sie für17 €.</a>
                 </div>
                 <div class='t396__elem tn-elem tn-elem__1123888991561268645935' data-elem-id='1561268645935'>
                     <div class='tn-atom' field='tn_text_1561268645935'>
